final merging steps

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -48,7 +48,7 @@
     -->
 
     <!-- Chatbot behavior -->
-    <script type="text/javascript" src="/static/app.js"></script>
+    <script type="text/javascript" src="./static/app.js"></script>
 
     <!-- React/Vite Script -->
     <script type="module" src="/src/main.jsx"></script>
